# math-rag

./: .dockerignore  .env.example  .env.hpc.example  .env.hpc.hf.lora.example  .env.hpc.hf.tgi.example  .gitignore  DEVELOPMENT.md  Dockerfile  Dockerfile.apptainer  Dockerfile.jupyter  Dockerfile.katex  Dockerfile.mcp.inspector  Dockerfile.mcp.remote  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  setup.py
.devcontainer/: devcontainer.json  post-create.sh
assets/: hello_world.sh
assets/hpc/hf/: cli.def  hf_cli.def
assets/hpc/ngrok/: ngrok.def  ngrok.yml
assets/hpc/prometheus/: prometheus.def  prometheus.yml
assets/huggingface/: hf_cli.def
assets/huggingface/tgi/: tgi.def  tgi.py  tgi.sh  tgi2.py
docs/classes/: base_assistant_protocol.md  concrete_assistant.md  legend.md  llm_batch_request_schedule.md  llm_request.md  llm_request_2.md  llm_result_2.md  llm_router.md  openai_llm.md  partial_batch_assistant.md  tgi_batch_llm.md
docs/sequences/: tgi.md  tgi_client.md  tokenizer.md
docs/umls/: llm_result.md  llm_router.md  llm_router_params.md  openai_batch_managed_llm_request_scheduler.md  openai_llm.md  openai_managed_llm.md  partial_assistant.md  partial_basic_assistant.md  partial_concurrent_assistant.md  tgi_batch_llm.md  tgi_batch_managed_llm.md
math_rag/: main.py
math_rag/application/agents/: __init__.py  katex_validator_agent.py  math_problem_solver_agent.py
math_rag/application/assistants/: __init__.py  katex_correction_assistant.py  katex_corrector_assistant.py  katex_corrector_retrier_assistant.py  katex_corrector_retry_assistant.py  kc_assistant.py  kc_retry_assistant.py  math_expression_classification_assistant.py  math_expression_comparator_assistant.py  math_expression_description_extractor_assistant.py  math_expression_description_optimizer_assistant.py  math_expression_description_writer_assistant.py  math_expression_labeler_assistant.py  math_expression_relationship_description_writer_assistant.py  math_expression_relationship_detector_assistant.py  mec_assistant copy.py  mec_assistant.py
math_rag/application/constants/: __init__.py  paths.py  settings.py
math_rag/application/containers/: __init__.py  application_container.py
math_rag/application/contexts/: __init__.py  dataset_build_context.py  dataset_test_context.py  fine_tune_job_run_context.py  index_build_context.py  task_context.py
math_rag/application/embedants/: __init__.py  math_expression_description_embedant.py
math_rag/application/embedders/: __init__.py  default_embedder.py  math_expression_description_embedder.py
math_rag/application/enums/: __init__.py  apptainer_build_status.py  apptainer_overlay_create_status.py
math_rag/application/extensions/: __init__.py  latex_math_node_rich.py  latex_math_rich_node.py
math_rag/application/models/: __init__.py  assistant_request.py  assistant_response.py  concurrent_em_settings.py  em_settings.py  katex_render_result.py  kc_assistant_input.py  llm_conversation.py  llm_default_response.py  llm_logprob.py  llm_params.py  llm_request.py  llm_request_batch.py  llm_response.py  llm_response_batch.py  llm_response_list.py  llm_settings.py  mec_assistant_input.py  mec_assistant_output.py  settings.py
math_rag/application/moderators/: __init__.py  default_moderator.py
math_rag/application/services/: __init__.py  batch_generator_service.py  dataset_builder_service.py  em_settings_loader_service.py  fine_tune_settings_loader_service.py  index_build_tracker_service.py  index_builder_service.py  katex_corrector_service.py  llm_settings_loader_service.py  math_article_chunk_loader_service.py  math_article_loader_service.py  math_article_parser_service.py  math_expression_context_loader_service.py  math_expression_dataset_builder_service.py  math_expression_dataset_publisher_service.py  math_expression_dataset_tester_service.py  math_expression_description_loader_service.py  math_expression_description_opt_loader_service.py  math_expression_group_loader_service.py  (+15 more)
math_rag/mcp/: __init__.py  app.py
math_rag/web/: __init__.py  app.py
notebooks/: agents.ipynb  chunker.ipynb  classification.ipynb  concurrent.ipynb  datasets.ipynb  fine_tune.ipynb  graphs.ipynb  hpc.ipynb  main.ipynb  notebook_hook.py  repositories.ipynb  search.ipynb  tests.ipynb
notebooks/hooks/: notebook_hook.py
provisioning/datasources/: prometheus.yml
settings/: embedding_models.yaml  large_language_models.yaml  models.yaml  text_embeddings_inference.yaml  text_generation_inference.yaml
settings/dashboards/: gpu_stat.json  pbs_pro_job.json
settings/fine_tune/: low_rank_adaptation.yaml
settings/inference/: embedding_models.yaml  large_language_models.yaml  text_generation_inference.yaml
settings/inferences/: moderation_models.yaml
settings/resources/: fine_tune.yaml  text_embeddings_inference.yaml
tests/: conftest.py
(+1478 files in other folders)
