[tool.poetry]
name = "math-rag"
version = "0.1.0"
description = ""
authors = ["Luka958Pixion <luka.panic@pixion.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
qdrant-client = "^1.13.2"
minio = "^7.2.15"
neo4j = "^5.28.1"
python-decouple = "^3.8"
openai = "^1.63.2"
pymongo = "^4.11.1"
pylatexenc = "^2.10"
google-api-python-client = "^2.161.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
dependency-injector = "^4.45.0"
arxiv = "^2.1.3"
backoff = "^2.2.1"
tiktoken = "^0.9.0"
asyncssh = "^2.20.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[tool.ruff]
line-length = 88
include = ["**/pyproject.toml", "**.py"]
exclude = [".git", ".vscode", ".idea", "build", "dist"]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = ["I"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
