[tool.poetry]
name = "math-rag"
version = "0.1.0"
description = ""
authors = ["Luka958Pixion <luka.panic@pixion.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
qdrant-client = "^1.13.2"
minio = "^7.2.15"
neo4j = "^5.28.1"
python-decouple = "^3.8"
openai = "^1.90.0"
pymongo = "^4.11.1"
google-api-python-client = "^2.161.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
dependency-injector = "^4.45.0"
arxiv = "^2.1.3"
backoff = "^2.2.1"
tiktoken = "^0.9.0"
asyncssh = "^2.20.0"
bcrypt = "^4.3.0"
aiofiles = "^24.1.0"
types-aiofiles = "^24.1.0.20250326"
python-decouple-typed = "^3.11.0"
docker = "^7.1.0"
datasets = "3.5.0"
numpy = "^2.2.5"
huggingface-hub = {version = "^0.30.1", extras = ["inference"]}
deprecated = "^1.2.18"
pylatexenc = "^2.10"
uvicorn = "^0.34.2"
scalar-fastapi = "^1.0.3"
mpxpy = "^0.0.8"
mcp = {extras = ["cli"], version = "^1.9.1"}
neomodel = "^5.4.5"
label-studio-sdk = "^1.0.17"
openai-agents = "^0.1.0"
more-itertools = "^10.7.0"
hdbscan = "^0.8.40"
matplotlib = "^3.10.3"
umap-learn = "^0.5.9.post2"
plotly = "^6.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pytest-asyncio = "^0.26.0"
pymermaider = "^0.1.4"
bokeh = "^3.7.3"


[tool.poetry.group."dev.tei".dependencies]
python-decouple = "^3.8"
pydantic = "^2.11.1"
huggingface-hub = {version = "^0.30.1", extras = ["inference"]}
backoff = "^2.2.1"
numpy = "^2.2.5"


[tool.poetry.group."dev.tgi".dependencies]
python-decouple = "^3.8"
pydantic = "^2.11.1"
huggingface-hub = {extras = ["inference"], version = "^0.30.1"}
backoff = "^2.2.1"


[tool.poetry.group."dev.lora".dependencies]
peft = "0.15.1"
transformers = {extras = ["torch"], version = "^4.51.3"}
trl = "0.16.1"
sentencepiece = "0.2.0"
datasets = "3.5.0"
wandb = "^0.19.9"
huggingface-hub = "^0.30.2"
python-decouple = "^3.8"
optuna = "^4.3.0"
outlines = "^0.2.3"
accelerate = "^1.8.1"
scikit-learn = "^1.7.0"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_level = "INFO"

[tool.ruff]
line-length = 100
include = ["**/pyproject.toml", "**.py", "**.pyi"]
exclude = [".git", ".vscode", ".idea", "build", "dist", ".venv/"]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = ["I"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
